# pdf-textract

./: README.md  code_file.py  requirements.txt  setup.cfg
input-pdfs/: code_file.py  input_sheet_output.xlsx
