[metadata]
home = /usr/bin
name = django-machine-vision
version = 0.1
description = A Django app to create document from google vision or textract.
long_description = file: README.md
url =
author = Shams
author_email = shams@example.com
license =
classifiers =
    Development Status :: 1 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Packages
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2
    boto3==1.16.20
    python-Levenshtein==0.12.0
    Pillow==8.0.0
    filetype==1.0.7
    pdf2image==1.14.0
    google-cloud-vision==2.0.0
    proto-plus==1.11.0
